Removed `min-width` style on the extended holding fields to avoid overflowing text.

--- a/themes/bootstrap3/less/bootstrap.less
+++ b/themes/bootstrap3/less/bootstrap.less
@@ -304,7 +304,6 @@ div.holding-details {
 
     .holding-field {
         flex: 1 1 0;
-        min-width: 9em;
         padding-left: 0.5rem;
         padding-right: 0.5rem;
     }
@@ -315,7 +314,6 @@ div.holding-details {
     .holding-field.ill-request,
     .holding-field.recall {
         flex: 1 1 0;
-        min-width: 9em;
     }
 
     .holding-field.availability{
